--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -4,15 +4,42 @@
     box-sizing: border-box;
 }
 .productone{
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     width: fit-content;
     padding: 1rem 1rem;
     box-shadow: 2px 2px 4px aliceblue;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     border-bottom-left-radius: 2em;
     border-bottom-right-radius: 2em;
 }
 .productone img{
+    height: 250px;
+    width: 300px;
+    object-fit: cover;
+}
+.producttwo{
+    /* border: 2px solid blue; */
+    width: fit-content;
+    padding: 1rem 1rem;
+    box-shadow: 2px 2px 4px aliceblue;
+    /* background-color: aquamarine; */
+    border-bottom-left-radius: 2em;
+    border-bottom-right-radius: 2em;
+}
+.producttwo img{
+    height: 250px;
+    width: 300px;
+    object-fit: cover;
+}
+.productthree{
+    width: fit-content;
+    padding: 1rem 1rem;
+    box-shadow: 2px 2px 4px aliceblue;
+    /* background-color: aquamarine; */
+    border-bottom-left-radius: 2em;
+    border-bottom-right-radius: 2em;
+}
+.productthree img{
     height: 250px;
     width: 300px;
     object-fit: cover;
