--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -18,8 +18,7 @@
     padding: 1rem 1rem;
     box-shadow: 2px 2px 4px aliceblue;
     background-color:rgb(240, 235, 235); 
-    border-bottom-left-radius: 2em;
-    border-bottom-right-radius: 2em;
+    border-radius: 2em;
     cursor: pointer;
 }
 
@@ -35,8 +34,7 @@
     padding: 1rem 1rem;
     box-shadow: 2px 2px 4px aliceblue;
    background-color:rgb(240, 235, 235);
-    border-bottom-left-radius: 2em;
-    border-bottom-right-radius: 2em;
+    border-radius: 2em;
     cursor: pointer;
 }
 .producttwo img{
@@ -49,8 +47,7 @@
     padding: 1rem 1rem;
     box-shadow: 2px 2px 4px aliceblue;
    background-color:rgb(240, 235, 235);
-    border-bottom-left-radius: 2em;
-    border-bottom-right-radius: 2em;
+   border-radius: 2em;
     cursor: pointer;
 }
 .productthree img{
@@ -64,8 +61,7 @@
     padding: 1rem 1rem;
     box-shadow: 2px 2px 4px aliceblue;
   background-color:rgb(240, 235, 235);
-    border-bottom-left-radius: 2em;
-    border-bottom-right-radius: 2em;
+   border-radius: 2em;
     cursor: pointer;
 }
 .productfour img{
@@ -78,8 +74,7 @@
     padding: 1rem 1rem;
     box-shadow: 2px 2px 4px aliceblue;
     background-color:rgb(240, 235, 235);
-    border-bottom-left-radius: 2em;
-    border-bottom-right-radius: 2em;
+    border-radius: 2em;
     cursor: pointer;
 }
 .productfive img{
@@ -92,8 +87,7 @@
     padding: 1rem 1rem;
     box-shadow: 2px 2px 4px aliceblue;
    background-color:rgb(240, 235, 235);
-    border-bottom-left-radius: 2em;
-    border-bottom-right-radius: 2em;
+    border-radius: 2em;
     cursor: pointer;
 }
 .productsix img{
@@ -107,8 +101,7 @@
     padding: 1rem 1rem;
     box-shadow: 2px 2px 4px aliceblue;
     background-color:rgb(240, 235, 235);
-    border-bottom-left-radius: 2em;
-    border-bottom-right-radius: 2em;
+    border-radius: 2em;
     margin-top: 1em;
     cursor:wait;
 }
