add style to products

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -110,3 +110,7 @@
     width: 300px;
     object-fit: cover;
 }
+.allProducts img:hover{
+    transform: scaleX(-1);
+    /* transform: scaleY(-1); */
+}
